# zillow_scraper

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  data.json  main.py  pyproject.toml
.github/workflows/: codeql.yml  coverage.yml  dependency-review.yml  python.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_automation_py.html  z_145eef247bfb46b6_browser_automation_py.html  z_145eef247bfb46b6_config_py.html  z_145eef247bfb46b6_constants_py.html  z_145eef247bfb46b6_exceptions_py.html  z_145eef247bfb46b6_form_submission_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_parsers_py.html  z_145eef247bfb46b6_scraper_py.html  z_145eef247bfb46b6_sheets_submission_py.html  z_a44f0ac069e85531_conftest_py.html
src/: automation.py  browser_automation.py  config.py  constants.py  exceptions.py  form_submission.py  main.py  parsers.py  scraper.py  sheets_submission.py
tests/: conftest.py  test_automation.py  test_clone_live.py  test_clone_live_edge_cases.py  test_config.py  test_dummy_code_live_scrolling.py  test_form_submission.py  test_main.py  test_scraper.py  test_sheets_submission.py  test_zillow_lazy_load.py  test_zillow_live_lazy_load.py  test_zillow_local.py  test_zillow_mock_lazy_load.py
tests/test_raw_parsing/: test_format_price_range.py  test_homefinder_edge_cases.py  test_parse_link.py  test_validate_card_basics.py
